--- a/Tutorial_Home/home.html
+++ b/Tutorial_Home/home.html
@@ -13,7 +13,7 @@
     <div id="grid_">
       <!-- ol is block element. Full size of Screen -->
       <ul id="menu_">
-        <li><a href="1.html"> HTML </a></li>
+        <li><a href="1.html"> KMC's HOME </a></li>
         <li><a href="3.html"> CSS </a></li>
         <li><a href="2.html"> JavaScript </a></li>
       </ul>
