Tutorial : Modifying DOM

--- a/VanillaJS/Basic_WebApp/index.html
+++ b/VanillaJS/Basic_WebApp/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>INDEX</title>
+        <title>Tutorial</title>
         <link rel="stylesheet" href="index.css"/>
     </head>
     <body>
-        <h1>hello vanilla</h1>
+        <h1 id="my_title">First</h1>
+        <h4>hello vanilla</h4>
 
         <script src="index.js"></script>
     </body>
