Tutorial : Event Handler

--- a/VanillaJS/Basic_WebApp/index.html
+++ b/VanillaJS/Basic_WebApp/index.html
@@ -9,5 +9,6 @@
         <h4>hello vanilla</h4>
 
         <script src="index.js"></script>
+        <script src="event.js"></script>
     </body>
 </html>
