Tutorial : Click Handler with CSS

--- a/VanillaJS/Basic_WebApp/index.html
+++ b/VanillaJS/Basic_WebApp/index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="index.css"/>
     </head>
     <body>
-        <h1 id="my_title">First</h1>
+        <h1 id="my_title" class="btn">First</h1>
         <h4>hello vanilla</h4>
 
         <script src="index.js"></script>
