--- a/VanillaJS/My_Momentum/index.html
+++ b/VanillaJS/My_Momentum/index.html
@@ -4,12 +4,28 @@
         <title>KMC Momentum</title>
         <link rel="stylesheet" href="index.css">
     </head>
-
     <body>
-        <h1 id="title">Momentum</h1>
+        <!-- CLOCK -->
+        <div class="js-clock">
+            <h1 class="js-clock-title"></h1>
+        </div>
 
-        <div class="js-clock"></div>
+        <!-- GREETING -->
+        <form class="js-form">
+            <input type="text" id="username" placeholder="What is your NAME?"/>
+        </form>
+        <h4 class="js-greeting hide"></h4>
+        <button id="logout">logout</button>
 
+        <!-- TODO LIST -->
+        <form class="js-todoform">
+            <input type="text" id="usertodo" placeholder="Write a to do!"/>
+        </form>
+        <ul class="js-todolist"></ul>
+
+        <!-- JS LIST -->
         <script src="clock.js"></script>
+        <script src="greeting.js"></script>
+        <script src="todo.js"></script>
     </body>
 </html>
