Finish : Tutorial of VanilaJS

--- a/VanillaJS/My_Momentum/index.html
+++ b/VanillaJS/My_Momentum/index.html
@@ -18,10 +18,10 @@
         <button id="logout">logout</button>
 
         <!-- TODO LIST -->
-        <form class="js-todoform">
+        <form class="js-todoform hide">
             <input type="text" id="usertodo" placeholder="Write a to do!"/>
         </form>
-        <ul class="js-todolist"></ul>
+        <ul class="js-todolist hide"></ul>
 
         <!-- JS LIST -->
         <script src="clock.js"></script>
